# cjm-markdown-decompose-core

./: README.md  pyproject.toml
cjm_markdown_decompose_core/: extract.py  ingest.py  parse.py  project.py  relations.py  sections.py
tests/: test_extract_project.py  test_ingest_graphproject.py  test_parse.py  test_relations.py  test_sections.py
tests_manual/: memory_body_roundtrip.py  memory_roundtrip.py  notes_slice.py
