[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-markdown-decompose-core"
dynamic = ["version"]
description = "A Markdown decomposition core for context graphs: parses Markdown content (frontmatter, structure, and [[wiki-links]]) into provenance-carrying graph nodes and edges. First source = the ecosystem's own memory/decision files; generalizes to any Markdown corpus."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ['cjm-dev-graph-schema>=0.0.1', 'cjm-context-graph-layer>=0.0.7', 'cjm-context-graph-primitives>=0.0.12', 'pyyaml>=6.0']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-markdown-decompose-core"

[tool.setuptools.dynamic]
version = {attr = "cjm_markdown_decompose_core.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_markdown_decompose_core*"]
